// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar renders correctly an error message if hook returned one 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "OpenSans-SemiBold",
        },
        Object {
          "color": "#f0834b",
          "fontSize": 12,
        },
      ]
    }
    testID="error-message"
  >
    An error occured
  </Text>
</View>
`;

exports[`Calendar renders correctly with data having been fetched and no loader displayed 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
    testID="calendar-controls"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "OpenSans-SemiBold",
          },
          Object {
            "color": "#12192b",
            "fontSize": 17,
          },
        ]
      }
    >
      Mars 2023
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginRight": 24,
            "opacity": 1,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../App/assets/left-chevron.png",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../App/assets/right-chevron.png",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#a9b2c3",
        "height": 2,
        "marginTop": 24,
        "opacity": 0.1,
      }
    }
  />
  <View
    testID="week-days-data"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          Object {
            "marginTop": 12,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          LUN
          .
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          MAR
          .
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          MER
          .
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          JEU
          .
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          VEN
          .
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          SAM
          .
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          DIM
          .
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Calendar renders correctly with loader, data being fetched 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
    testID="calendar-controls"
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "OpenSans-SemiBold",
          },
          Object {
            "color": "#12192b",
            "fontSize": 17,
          },
        ]
      }
    >
      Avril 2022
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginRight": 24,
            "opacity": 1,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../App/assets/left-chevron.png",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../App/assets/right-chevron.png",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#a9b2c3",
        "height": 2,
        "marginTop": 24,
        "opacity": 0.1,
      }
    }
  />
  <ActivityIndicator
    size="small"
    style={
      Object {
        "marginTop": 24,
      }
    }
    testID="loader"
  />
</View>
`;
